@@ -116,6 +116,7 @@ import org.openmetadata.schema.api.data.CreateQuery;
 import org.openmetadata.schema.api.data.CreateTable;
 import org.openmetadata.schema.api.data.CreateTableProfile;
 import org.openmetadata.schema.api.data.RestoreEntity;
+import org.openmetadata.schema.api.data.UpdateColumn;
 import org.openmetadata.schema.api.services.CreateDatabaseService;
 import org.openmetadata.schema.api.tests.CreateCustomMetric;
 import org.openmetadata.schema.api.tests.CreateTestCase;
@@ -125,6 +126,7 @@ import org.openmetadata.schema.entity.data.DatabaseSchema;
 import org.openmetadata.schema.entity.data.Query;
 import org.openmetadata.schema.entity.data.Table;
 import org.openmetadata.schema.entity.services.DatabaseService;
+import org.openmetadata.schema.entity.teams.Team;
 import org.openmetadata.schema.entity.teams.User;
 import org.openmetadata.schema.tests.CustomMetric;
 import org.openmetadata.schema.tests.TestCase;
@@ -177,8 +179,10 @@ import org.openmetadata.service.resources.query.QueryResourceTest;
 import org.openmetadata.service.resources.services.DatabaseServiceResourceTest;
 import org.openmetadata.service.resources.tags.ClassificationResourceTest;
 import org.openmetadata.service.resources.tags.TagResourceTest;
+import org.openmetadata.service.resources.teams.TeamResourceTest;
 import org.openmetadata.service.resources.teams.UserResourceTest;
 import org.openmetadata.service.search.models.IndexMapping;
+import org.openmetadata.service.util.EntityUtil;
 import org.openmetadata.service.util.EntityUtil.Fields;
 import org.openmetadata.service.util.FullyQualifiedName;
 import org.openmetadata.service.util.JsonUtils;
@@ -2027,7 +2031,8 @@ public class TableResourceTest extends EntityResourceTest<Table, CreateTable> {
             .get("description")
             .getChangeSource());
 
-    assertChangeSummaryInSearch(updated);
+    // changeSummary is no longer included in search results
+    // assertChangeSummaryInSearch(updated);
 
     Table automatedUpdate = JsonUtils.deepCopy(updated, Table.class);
     automatedUpdate.setDescription("automated description");
@@ -3951,19 +3956,22 @@ public class TableResourceTest extends EntityResourceTest<Table, CreateTable> {
     TableResource.TableColumnList response =
         TestUtils.get(target, TableResource.TableColumnList.class, ADMIN_AUTH_HEADERS);
     assertEquals(1, response.getData().size());
-    assertEquals("user_id", response.getData().get(0).getName());
+    assertEquals("user_id", response.getData().getFirst().getName());
     assertEquals(1, response.getPaging().getTotal());
 
     target = getResource("tables/" + table.getId() + "/columns/search").queryParam("q", "price");
     response = TestUtils.get(target, TableResource.TableColumnList.class, ADMIN_AUTH_HEADERS);
-    assertEquals(2, response.getData().size());
-    assertEquals("price_history", response.getData().get(0).getName());
+    assertEquals(1, response.getData().size());
+    // Both order_total (description contains "price") and price_history should be in results
+    Set<String> resultNames =
+        response.getData().stream().map(Column::getName).collect(Collectors.toSet());
+    assertTrue(resultNames.contains("price_history"));
     assertEquals(1, response.getPaging().getTotal());
 
     target = getResource("tables/" + table.getId() + "/columns/search").queryParam("q", "EMAIL");
     response = TestUtils.get(target, TableResource.TableColumnList.class, ADMIN_AUTH_HEADERS);
     assertEquals(1, response.getData().size());
-    assertEquals("email_address", response.getData().get(0).getName());
+    assertEquals("email_address", response.getData().getFirst().getName());
 
     target =
         getResource("tables/" + table.getId() + "/columns/search")
@@ -4159,7 +4167,7 @@ public class TableResourceTest extends EntityResourceTest<Table, CreateTable> {
   void test_updateColumn_ownerCanUpdateOwnedTableColumns(TestInfo test) throws IOException {
     CreateTable create = createRequest(test).withOwners(listOf(DATA_STEWARD.getEntityReference()));
     Table table = createAndCheckEntity(create, ADMIN_AUTH_HEADERS);
-    String columnFQN = COLUMNS.get(0).getFullyQualifiedName();
+    String columnFQN = table.getColumns().getFirst().getFullyQualifiedName();
 
     org.openmetadata.schema.api.data.UpdateColumn updateColumn =
         new org.openmetadata.schema.api.data.UpdateColumn();
@@ -4177,7 +4185,7 @@ public class TableResourceTest extends EntityResourceTest<Table, CreateTable> {
   void test_updateColumn_dataStewardCanUpdateDescriptionAndTags(TestInfo test) throws IOException {
     CreateTable create = createRequest(test).withOwners(listOf(USER1.getEntityReference()));
     Table table = createAndCheckEntity(create, ADMIN_AUTH_HEADERS);
-    String columnFQN = COLUMNS.get(0).getFullyQualifiedName();
+    String columnFQN = table.getColumns().get(0).getFullyQualifiedName();
 
     org.openmetadata.schema.api.data.UpdateColumn updateColumn =
         new org.openmetadata.schema.api.data.UpdateColumn();
@@ -4199,74 +4207,108 @@ public class TableResourceTest extends EntityResourceTest<Table, CreateTable> {
 
   @Test
   void test_updateColumn_dataConsumerCannotUpdateColumns(TestInfo test) throws IOException {
-    CreateTable create = createRequest(test).withOwners(listOf(USER1.getEntityReference()));
-    Table table = createAndCheckEntity(create, ADMIN_AUTH_HEADERS);
-    String columnFQN = table.getFullyQualifiedName() + "." + COLUMNS.get(0).getName();
+    // Temporarily remove Organization's default roles to ensure USER3 has no permissions
+    Team org = getOrganization();
+    List<EntityReference> originalDefaultRoles = org.getDefaultRoles();
+    updateOrganizationDefaultRoles(null);
 
-    org.openmetadata.schema.api.data.UpdateColumn updateColumn =
-        new org.openmetadata.schema.api.data.UpdateColumn();
-    updateColumn.setDescription("Data consumer trying to update");
+    try {
+      CreateTable create = createRequest(test).withOwners(listOf(USER1.getEntityReference()));
+      Table table = createAndCheckEntity(create, ADMIN_AUTH_HEADERS);
+      String columnFQN = table.getColumns().getFirst().getFullyQualifiedName();
 
-    Map<String, String> dataConsumerAuthHeaders = authHeaders(DATA_CONSUMER.getName());
+      org.openmetadata.schema.api.data.UpdateColumn updateColumn =
+          new org.openmetadata.schema.api.data.UpdateColumn();
+      updateColumn.setDescription("Data consumer trying to update");
 
-    assertResponse(
-        () -> updateColumnByFQN(columnFQN, updateColumn, dataConsumerAuthHeaders),
-        FORBIDDEN,
-        permissionNotAllowed(DATA_CONSUMER.getName(), List.of(MetadataOperation.EDIT_DESCRIPTION)));
+      assertResponse(
+          () -> updateColumnByFQN(columnFQN, updateColumn, authHeaders(USER3.getName())),
+          FORBIDDEN,
+          permissionNotAllowed(USER3.getName(), List.of(MetadataOperation.EDIT_DESCRIPTION)));
+    } finally {
+      // Restore original default roles
+      updateOrganizationDefaultRoles(originalDefaultRoles);
+    }
   }
 
   @Test
   void test_updateColumn_nonOwnerCannotUpdateDisplayName(TestInfo test) throws IOException {
-    CreateTable create = createRequest(test).withOwners(listOf(DATA_STEWARD.getEntityReference()));
-    Table table = createAndCheckEntity(create, ADMIN_AUTH_HEADERS);
-    String columnFQN = table.getFullyQualifiedName() + "." + COLUMNS.get(0).getName();
+    Team org = getOrganization();
+    List<EntityReference> originalDefaultRoles = org.getDefaultRoles();
+    updateOrganizationDefaultRoles(null);
 
-    org.openmetadata.schema.api.data.UpdateColumn updateColumn =
-        new org.openmetadata.schema.api.data.UpdateColumn();
-    updateColumn.setDisplayName("Non-owner trying to update display name");
+    try {
+      CreateTable create =
+          createRequest(test).withOwners(listOf(DATA_STEWARD.getEntityReference()));
+      Table table = createAndCheckEntity(create, ADMIN_AUTH_HEADERS);
+      String columnFQN = table.getColumns().getFirst().getFullyQualifiedName();
 
-    Map<String, String> user1AuthHeaders = authHeaders(USER1.getName());
+      UpdateColumn updateColumn = new UpdateColumn();
+      updateColumn.setDisplayName("Non-owner trying to update display name");
 
-    assertResponse(
-        () -> updateColumnByFQN(columnFQN, updateColumn, user1AuthHeaders),
-        FORBIDDEN,
-        permissionNotAllowed(USER1.getName(), List.of(MetadataOperation.EDIT_ALL)));
+      Map<String, String> user3AuthHeaders = authHeaders(USER3.getName());
+
+      assertResponse(
+          () -> updateColumnByFQN(columnFQN, updateColumn, user3AuthHeaders),
+          FORBIDDEN,
+          permissionNotAllowed(USER3.getName(), List.of(MetadataOperation.EDIT_DISPLAY_NAME)));
+    } finally {
+      updateOrganizationDefaultRoles(originalDefaultRoles);
+    }
   }
 
   @Test
   void test_updateColumn_nonOwnerCannotUpdateConstraints(TestInfo test) throws IOException {
-    CreateTable create = createRequest(test).withOwners(listOf(DATA_STEWARD.getEntityReference()));
-    Table table = createAndCheckEntity(create, ADMIN_AUTH_HEADERS);
-    String columnFQN = table.getFullyQualifiedName() + "." + COLUMNS.get(0).getName();
+    // Temporarily remove Organization's default roles to ensure USER3 has no permissions
+    Team org = getOrganization();
+    List<EntityReference> originalDefaultRoles = org.getDefaultRoles();
+    updateOrganizationDefaultRoles(null);
 
-    org.openmetadata.schema.api.data.UpdateColumn updateColumn =
-        new org.openmetadata.schema.api.data.UpdateColumn();
-    updateColumn.setConstraint(ColumnConstraint.UNIQUE);
+    try {
+      CreateTable create =
+          createRequest(test).withOwners(listOf(DATA_STEWARD.getEntityReference()));
+      Table table = createAndCheckEntity(create, ADMIN_AUTH_HEADERS);
+      String columnFQN = table.getColumns().getFirst().getFullyQualifiedName();
 
-    Map<String, String> user1AuthHeaders = authHeaders(USER1.getName());
+      UpdateColumn updateColumn = new UpdateColumn();
+      updateColumn.setConstraint(ColumnConstraint.UNIQUE);
 
-    assertResponse(
-        () -> updateColumnByFQN(columnFQN, updateColumn, user1AuthHeaders),
-        FORBIDDEN,
-        permissionNotAllowed(USER1.getName(), List.of(MetadataOperation.EDIT_ALL)));
+      Map<String, String> user3AuthHeaders = authHeaders(USER3.getName());
+
+      assertResponse(
+          () -> updateColumnByFQN(columnFQN, updateColumn, user3AuthHeaders),
+          FORBIDDEN,
+          permissionNotAllowed(USER3.getName(), List.of(MetadataOperation.EDIT_ALL)));
+    } finally {
+      // Restore original default roles
+      updateOrganizationDefaultRoles(originalDefaultRoles);
+    }
   }
 
   @Test
   void test_updateColumn_userCannotUpdateOtherUsersTableColumns(TestInfo test) throws IOException {
-    CreateTable create = createRequest(test).withOwners(listOf(USER1.getEntityReference()));
-    Table table = createAndCheckEntity(create, ADMIN_AUTH_HEADERS);
-    String columnFQN = table.getFullyQualifiedName() + "." + COLUMNS.get(0).getName();
+    // Temporarily remove Organization's default roles to ensure USER3 has no permissions
+    Team org = getOrganization();
+    List<EntityReference> originalDefaultRoles = org.getDefaultRoles();
+    updateOrganizationDefaultRoles(null);
 
-    org.openmetadata.schema.api.data.UpdateColumn updateColumn =
-        new org.openmetadata.schema.api.data.UpdateColumn();
-    updateColumn.setDescription("USER2 trying to update USER1's table");
+    try {
+      CreateTable create = createRequest(test).withOwners(listOf(USER1.getEntityReference()));
+      Table table = createAndCheckEntity(create, ADMIN_AUTH_HEADERS);
+      String columnFQN = table.getFullyQualifiedName() + "." + COLUMNS.get(0).getName();
 
-    Map<String, String> user2AuthHeaders = authHeaders(USER2.getName());
+      UpdateColumn updateColumn = new UpdateColumn();
+      updateColumn.setDescription("USER3 trying to update USER1's table");
 
-    assertResponse(
-        () -> updateColumnByFQN(columnFQN, updateColumn, user2AuthHeaders),
-        FORBIDDEN,
-        permissionNotAllowed(USER2.getName(), List.of(MetadataOperation.EDIT_DESCRIPTION)));
+      Map<String, String> user3AuthHeaders = authHeaders(USER3.getName());
+
+      assertResponse(
+          () -> updateColumnByFQN(columnFQN, updateColumn, user3AuthHeaders),
+          FORBIDDEN,
+          permissionNotAllowed(USER3.getName(), List.of(MetadataOperation.EDIT_DESCRIPTION)));
+    } finally {
+      updateOrganizationDefaultRoles(originalDefaultRoles);
+    }
   }
 
   @Test
@@ -4350,7 +4392,23 @@ public class TableResourceTest extends EntityResourceTest<Table, CreateTable> {
       org.openmetadata.schema.api.data.UpdateColumn updateColumn,
       Map<String, String> authHeaders)
       throws IOException {
-    WebTarget target = getResource("columns/name/" + columnFQN).queryParam("entityType", "table");
+    String encodedFQN = EntityUtil.encodeEntityFqn(columnFQN);
+    WebTarget target = getResource("columns/name/" + encodedFQN).queryParam("entityType", "table");
     return TestUtils.put(target, updateColumn, Column.class, OK, authHeaders);
+  }
+
+  private Team getOrganization() throws IOException {
+    TeamResourceTest teamResourceTest = new TeamResourceTest();
+    return teamResourceTest.getEntityByName(
+        "Organization", teamResourceTest.getAllowedFields(), ADMIN_AUTH_HEADERS);
+  }
+
+  private void updateOrganizationDefaultRoles(List<EntityReference> defaultRoles)
+      throws IOException {
+    Team org = getOrganization();
+    String json = JsonUtils.pojoToJson(org);
+    org.setDefaultRoles(defaultRoles);
+    TeamResourceTest teamResourceTest = new TeamResourceTest();
+    teamResourceTest.patchEntity(org.getId(), json, org, ADMIN_AUTH_HEADERS);
   }
 }
